projekt teilweise definiert

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       <div class="results-container">
         <p id="results-msg"></p>
         <p id="winner-msg"></p>
-        <button class="btn" id="reset-game-btn">Play again?</button>
+        <button class="btn" id="reset-game-btn" onclick="resetGame()">
+          Play again?
+        </button>
       </div>
     </main>
     <script src="./script.js"></script>
